--- a/FE_9_3_homework_preprocessors/homework/scss/_main.scss
+++ b/FE_9_3_homework_preprocessors/homework/scss/_main.scss
@@ -137,7 +137,7 @@ body{
 				color: $form_text;
 			}
 		}
-		input[type=submit] {
+		input[type= "submit"] {
 			width: 20%;
 			background-color: $navigation_color;
 			border: 2px solid $navigation_color;
