--- a/FE_9_4_homework_css-layouts/homework/css/style.css
+++ b/FE_9_4_homework_css-layouts/homework/css/style.css
@@ -2,10 +2,10 @@
   padding: 0;
   margin: 0; }
 
-html, body {
+body {
 	margin: 0 auto;
 	width: 100%; 
-	background-color:#B7C8D9 ;
+	background-color:#b7c8d9 ;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 18px;
 }
@@ -41,15 +41,15 @@ header .top-head .logo-smoll {
 	text-transform: uppercase;
 	letter-spacing: 0.25em;
 }
-  header nav {
+header nav {
     display: inline-block;
-  }
-    header nav a {
-	  color: #ffffff;
-	  padding: 10px 10px;
-	  margin: 0 10px; 
-	  text-decoration: none; 
-    }
+}
+header nav a {
+	color: #ffffff;
+	padding: 10px 10px;
+	margin: 0 10px; 
+	text-decoration: none; 
+}
 header .logo-big {
     color: #ffffff;
     font-size: 3em;
@@ -73,19 +73,19 @@ header button {
 .about {
   max-width: 1200px;
   margin: 0 auto;
-  background: #FFF;
+  background: #ffffff;
   height: 360px;
   display: flex;
   flex-direction: row;
   align-items: center;
 }
-  .about .text1 {
+.about .text1 {
     max-width: 450px;
     font-size: 1.1em;
     margin-right: 30px;
     margin-left: 60px; 
 }
-  .about .text2 {
+.about .text2 {
     max-width: 550px;
     font-size: 0.75em;
     margin-left: 60px; 
@@ -117,7 +117,6 @@ header button {
 		height: 300px;
 		position: relative; 
 	}
-	
 	.vacancies .flex-conteiner .article-small{
 			width: 300px;
 			flex: 1;
@@ -126,50 +125,49 @@ header button {
 			padding:60px 20px 50px 20px;
 	}
 	.vacancies .flex-conteiner .item1{
-		background: linear-gradient(to bottom, rgba(255, 255, 255, 0.01) 65%, rgba(0, 0, 0, 0.1) 75%, rgba(0, 0, 0, 0.6)),  url("../img/sample.jpg") center/cover;
+		background: linear-gradient(to right, rgba(255, 255, 255, 0.01) 65%, rgba(0, 0, 0, 0.1) 75%, rgba(0, 0, 0, 0.4)),  url("../img/sample.jpg") center/cover;
 		width: 770px;
 		height: 300px;
 		position: relative; 
 		margin-left: 20px;
 	}	
-	
 	.vacancies .flex-conteiner .item2{
-		background:linear-gradient(to bottom, rgba(255, 255, 255, 0.01) 65%, rgba(0, 0, 0, 0.1) 75%, rgba(0, 0, 0, 0.6)),  url("../img/sample3.jpg") center/cover;		
+		background:linear-gradient(to bottom, rgba(255, 255, 255, 0.01) 65%, rgba(0, 0, 0, 0.1) 75%, rgba(0, 0, 0, 0.5)),  url("../img/sample3.jpg") center/cover;		
 		width: 770px;
 		height: 300px;
 		position: relative;  
 		margin-right: 20px;
 	}
-.vacancies .flex-conteiner .article-small p{	
+	.vacancies .flex-conteiner .article-small p{	
 		color: #000000;
 		text-align: center;
-}
-.flex-conteiner .likes {
-	position: absolute;
-    top: 20px;
-    right: 20px;
-    padding: 8px 12px;
-    background: #343638;
-    border: 2px solid #ffffff;
-    font-size: 0.9em;
-    opacity: 0.8; 
 	}
-.flex-conteiner .date {
-    position: absolute;
-    left: 25px;
-    bottom: 25px;
-    font-size: 0.9em; 
+	.flex-conteiner .likes {
+		position: absolute;
+		top: 20px;
+		right: 20px;
+		padding: 8px 12px;
+		background: #343638;
+		border: 2px solid #ffffff;
+		font-size: 0.9em;
+		opacity: 0.8; 
 	}
-.flex-conteiner .date a{
-	color: #ffffff;
-	text-decoration: none;
+	.flex-conteiner .date {
+		position: absolute;
+		left: 25px;
+		bottom: 25px;
+		font-size: 0.9em; 
 	}
+	.flex-conteiner .date a{
+		color: #ffffff;
+		text-decoration: none;
+		}
 .vacancies .bottom{
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
 	align-items: center; 
-	max-width: 1100px;
+	max-width: 1150px;
 	width: 100%;
 	height: 200px;
 	background: #ffffff;
@@ -184,12 +182,12 @@ header button {
 	}
 .vacancies .bottom form{
 	flex: 1.5;
-    margin-right: 30px;
+    margin-right: 10px;
 	}
 .vacancies .bottom input[type="email"] {
     box-sizing: border-box;
-    max-width: 450px;
-    width: 75%;
+    max-width: 600px;
+    width: 80%;
     height: 55px;
     padding-left: 15px;
     background: #f3f3f3;
@@ -199,8 +197,8 @@ header button {
 	}
 .vacancies .bottom input[type="submit"] {
 	font-size: 0.9em;
-    max-width: 150px;
-    width: 25%;
+    max-width: 100px;
+    width: 20%;
     height: 55px;
     box-sizing: border-box;
     border:  2px solid #343638; 
@@ -210,82 +208,77 @@ header button {
     cursor: pointer; 
 	}
 footer {
-  max-width: 1200px;
-  margin: 0 auto;
-  background: #ffffff;
-  height: 500px;
-  align-items: center;
-  display: flex;
-  flex-direction: column; 
-  }
-.text-blocks {
-	max-width: 1100px;
-	margin-top: 140px;
-	margin-bottom: 120px;
+	max-width: 1200px;
+	margin: 0 auto;
+	background: #ffffff;
+	height: 500px;
+	align-items: center;
 	display: flex;
-	flex-direction: row; 
+	flex-direction: column; 
 	}
-.text-blocks h4:not(:nth-child(3)) {
-    margin-bottom: 20px; 
+	footer .text-blocks {
+		max-width: 1100px;
+		margin-top: 140px;
+		margin-bottom: 120px;
+		display: flex;
+		flex-direction: row; 
 	}
-.text-blocks p {
-    font-size: 0.9em;
-    color: #9e9e9e; 
+	.text-blocks h4 {
+		margin-bottom: 20px; 
 	}
-.text-blocks .text1 {
-    flex: 1;
+	.text-blocks p {
+		font-size: 0.9em;
+		color: #9e9e9e; 
+	}
+	.text-blocks .text1 {
+		flex: 1;
  	}
-.text-blocks .text2 {
-	 margin-left: 10px;
-    flex: 1; 
+	.text-blocks .text2 {
+		margin-left: 15px;
+		flex: 1; 
 	}
-.text-blocks .text2 h4 {
-      margin-bottom: 15px; 
-	  } 
-.text-blocks .text2 .time {
-      margin-top: 10px;
-      font-size: 0.8rem;
-      color: #e8e8e8; }
-.text-blocks .text3 p {
-      line-height: 1.8em; 
-	  }
-.text-blocks .text3 {
-    flex: 1;
-    margin-left: 10px;
+	.text-blocks .text2 .time {
+		margin-top: 10px;
+		font-size: 0.8em;
+		color: #e8e8e8; 
+	}
+	.text-blocks .text3 p {
+		line-height: 1.7em; 
+	}
+	.text-blocks .text3 {
+		flex: 0.7;
+		margin-left: 20px;
  	}
-.text-blocks .text3 p {
-      font-size: 0.85rem; 
-	  }
-.text-blocks .text4 {
-    flex: 1.2;
-    margin-right: 10px; 
+	.text-blocks .text4 {
+		flex: 1.3;
+		margin-right: 10px;
+		margin-left: 20px;		
 	}
-.text-blocks .text4 p {
-    font-size: 0.9rem;
-    margin-bottom: 30px; 
+	.text-blocks .text4 p {
+		margin-bottom: 30px; 
 	}
-.text-blocks .text4 input[type="email"] {
-    box-sizing: border-box;
-    width: 63%;
-    height: 50px;
-    padding-left: 10px;
-    background: #f3f3f3;
-    border:  2px solid #343638;
-    color: #000000;
-    font-weight: bold;
-    font-style: italic;
-    font-size: 0.8rem; 
+	.text-blocks .text4 input[type="email"] {
+		box-sizing: border-box;
+		width: 63%;
+		height: 50px;
+		padding-left: 10px;
+		background: #f3f3f3;
+		border:  2px solid #343638;
+		color: #000000;
+		font-weight: bold;
+		font-style: italic;
+		font-size: 0.8rem; 
 	}
-.text-blocks .text4 input[type="submit"] {
-      width: 34%;
-      height: 50px;
-      box-sizing: border-box;
-      border:  2px solid #343638;
-      background: #343638;
-      color: #e8e8e8;
-      font-weight: bold;
-      cursor: pointer;
-      font-size: 0.8rem; 
+	.text-blocks .text4 input[type="submit"] {
+		width: 34%;
+		height: 50px;
+		box-sizing: border-box;
+		border:  2px solid #343638;
+		background: #343638;
+		color: #e8e8e8;
+		font-weight: bold;
+		cursor: pointer;
+		font-size: 0.8rem; 
 	}
 .footer-bottom {
 	padding: 25px 0;
@@ -293,14 +286,13 @@ footer {
 	font-size: 0.9rem;
 	width: 100%;
 	display: flex;
-	flex-direction: row;
+	flex-direction: row;	
+	justify-content: space-between; 
 	color: #B7C8D9;
 	border-top:  2px solid #e8e8e8;
-	justify-content: space-between; 
 	}
 .footer-bottom nav {
     display: inline-block;
-    margin-right: 5%; 
 	}
 .footer-bottom nav a {
     font-weight: bold;
@@ -308,4 +300,4 @@ footer {
     color: #343638;
     padding: 10px 10px;
     margin: 0px 5px; 
-	}
+	} 
